--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/main.html">All Streams</a>
+      <a style="color: #3366ff;" href="https://asherr.org/main">All Streams</a>
     </span>
     </p>
     <p style="text-align: center;">
