--- a/main.html
+++ b/main.html
@@ -10,17 +10,17 @@
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Mixshow Database">
 <meta property="og:description" content="Database for Mixshows!">
-<meta property="og:image" content="https://q102.neocities.org/DJ.png">
+<meta property="og:image" content="https://asherr.org/DJ.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="Mixshow Database">
 <meta property="twitter:description" content="Database for Mixshows!">
-<meta property="twitter:image" content="https://q102.neocities.org/DJ.png">
+<meta property="twitter:image" content="https://asherr.org/DJ.png">
 
 <h1 style="text-align: center;">
-  <a href="https://q102.neocities.org/">Mixshow Database</a>
+  <a href="https://asherr.org/">Mixshow Database</a>
 </h1>
 <hr />
 
