--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <meta property="og:url" content="https://asherr.org/">
 <meta property="og:title" content="Mixshow Database">
 <meta property="og:description" content="The database for all radio station mixshows to listen to all in one place!">
-<meta property="og:image" content="https://q102.neocities.org/DJ.png">
+<meta property="og:image" content="https://asherr.org/DJ.png">
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://q102.neocities.org/">
+<meta property="twitter:url" content="https://asherr.org/">
 <meta property="twitter:title" content="Mixshow Database">
 <meta property="twitter:description" content="The database for all radio station mixshows to listen to all in one place!">
-<meta property="twitter:image" content="https://q102.neocities.org/DJ.png">
+<meta property="twitter:image" content="https://asherr.org/DJ.png">
 <body style="background-color:black;">
   <h2 style="text-align: center;">
     <span style="text-decoration: underline; color: #ffffff;">
@@ -27,32 +27,32 @@
   </h4>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/q102.html">Q102's Stream</a>
+      <a style="color: #3366ff;" href="https://asherr.org/q102.html">Q102's Stream</a>
     </span>
   </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/Europe.html">Europe Mixshows</a>
+      <a style="color: #3366ff;" href="https://asherr.org/Europe.html">Europe Mixshows</a>
     </span>
     </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/usa.html">USA Mixshows</a>
+      <a style="color: #3366ff;" href="https://asherr.org/usa.html">USA Mixshows</a>
     </span>
     </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/wbbo.html">B98.5's Stream</a>
+      <a style="color: #3366ff;" href="https://asherr.org/wbbo.html">B98.5's Stream</a>
     </span>
   </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/x1071.html">X107.1's Stream</a>
+      <a style="color: #3366ff;" href="https://asherr.org/x1071.html">X107.1's Stream</a>
     </span>
   </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/radio1hu.html">Radio 1 (Hungary)</a>
+      <a style="color: #3366ff;" href="https://asherr.org/radio1hu.html">Radio 1 (Hungary)</a>
     </span>
     </p>
   <p style="text-align: center;">
@@ -62,6 +62,6 @@
     </p>
     <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://q102.neocities.org/schedule.html">Schedule</a>
+      <a style="color: #3366ff;" href="https://asherr.org/schedule.html">Schedule</a>
     </span>
     </p>
