--- a/rds.html
+++ b/rds.html
@@ -346,3 +346,14 @@ function decimalToHexadecimal(form) {
 
 
 </SCRIPT>
+
+<form>
+<table border="0">
+	<tr><td>Callsign:</td><td><input type="text" size="16" name="csign"> (do <u>not</u> enter the -FM or -LP suffix)</td></tr>
+	<tr><td>PI code:</td><td><input type="text" size="8" name="picode">(decimal)</td></tr>
+	<tr><td>PI code:</td><td><input type="text" size="8" name="pihex">(hexadecimal)</td></tr>
+	<tr><td><input type="button" value="Calculate" onclick="RDSCall(this.form)"></td><td><input type="reset"></td></tr>
+</table>
+</form>
+	</body>
+	</html>
