--- a/rds.html
+++ b/rds.html
@@ -1,3 +1,21 @@
+
+<!-- Primary Meta Tags -->
+<title>RDS PI Decode</title>
+<meta name="title" content="RDS PI Decode USA">
+<meta name="description" content="RDS PI Decode! (Built by w9wi)">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://asherr.org/">
+<meta property="og:title" content="RDS PI Decode">
+<meta property="og:description" content="RDS PI Decode! (Built by w9wi)">
+<meta property="og:image" content="https://asherr.org/RDS.png">
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://asherr.org/">
+<meta property="twitter:title" content="Mixshow Database">
+<meta property="twitter:description" content="RDS PI Decode! (Built by w9wi)">
+<meta property="twitter:image" content="https://asherr.org/RDS.png">
+<body style="background-color:black;">
 <SCRIPT LANGUAGE="JavaScript">
 function RDSCall(obj)
 {
