--- a/rds.html
+++ b/rds.html
@@ -12,7 +12,7 @@
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://asherr.org/">
-<meta property="twitter:title" content="Mixshow Database">
+<meta property="twitter:title" content="RDS PI Decode!">
 <meta property="twitter:description" content="RDS PI Decode! (Built by w9wi)">
 <meta property="twitter:image" content="https://asherr.org/RDS.png">
 <body style="background-color:black;">
