--- a/rds.html
+++ b/rds.html
@@ -15,7 +15,7 @@
 <meta property="twitter:title" content="RDS PI Decode!">
 <meta property="twitter:description" content="RDS PI Decode! (Built by w9wi)">
 <meta property="twitter:image" content="https://asherr.org/RDS.png">
-<body style="background-color:black;">
+<body style="background-color:grey;">
 <SCRIPT LANGUAGE="JavaScript">
 function RDSCall(obj)
 {
