--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #cccccc; /* Regular gray background */
     text-align: center;
-    margin-top: 50px;
+    padding-bottom: 50px; /* Space for the footer */
   }
   .options {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
     margin-top: 20px;
   }
   .option {
@@ -44,9 +45,16 @@
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
+    margin-bottom: 10px;
+    display: block;
   }
   .option:hover {
     background-color: #45a049;
+  }
+  .gif-url {
+    font-size: 14px;
+    color: #333;
+    margin-top: 20px;
   }
 </style>
 </head>
@@ -56,6 +64,9 @@
     <a class="option" href="/rdsdb">PI to Callsign</a>
     <a class="option" href="/callsignlookup">Call Sign to PI</a>
     <a class="option" href="/mix">Mixshow Database</a>
+  </div>
+  <div class="gif-url">
+    <p>https://asherr.org/elprimo.gif</p>
   </div>
 </body>
 </html>
