--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     font-family: Arial, sans-serif;
     background-color: #cccccc; /* Regular gray background */
     text-align: center;
-    padding-bottom: 50px; /* Space for the footer */
+    padding-bottom: 20px; /* Space for the footer */
   }
   .options {
     display: flex;
@@ -51,9 +51,7 @@
   .option:hover {
     background-color: #45a049;
   }
-  .gif-url {
-    font-size: 14px;
-    color: #333;
+  .gif-container {
     margin-top: 20px;
   }
 </style>
@@ -65,8 +63,8 @@
     <a class="option" href="/callsignlookup">Call Sign to PI</a>
     <a class="option" href="/mix">Mixshow Database</a>
   </div>
-  <div class="gif-url">
-    <p>https://asherr.org/elprimo.gif</p>
+  <div class="gif-container">
+    <img src="https://asherr.org/elprimo.gif" alt="GIF not found" width="300">
   </div>
 </body>
 </html>
