--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #cccccc; /* Regular gray background */
+    background-color: #3c3f43; /* Regular gray background */
     text-align: center;
     padding-bottom: 20px; /* Space for the footer */
   }
