--- a/mix.html
+++ b/mix.html
@@ -32,7 +32,7 @@
   </p>
   <p style="text-align: center;">
     <span style="color: #3366ff;">
-      <a style="color: #3366ff;" href="https://asherr.org/Europe.html">Europe Mixshows</a>
+      <a style="color: #3366ff;" href="https://asherr.org/europe.html">Europe Mixshows</a>
     </span>
     </p>
   <p style="text-align: center;">
