--- a/radio1hu.html
+++ b/radio1hu.html
@@ -1,21 +1,21 @@
 <body>
   <!-- Primary Meta Tags -->
 <title>Europe Mixshow Database</title>
-<meta name="title" content="Europe Mixshow Database">
-<meta name="description" content="A collection of radio station streams located in Europe that have mixshows occuring.">
+<meta name="title" content="Mixshow Database">
+<meta name="description" content="Radio 1 Hungary Live!">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://asherr.org/Europe.html">
-<meta property="og:title" content="Europe Mixshow Database">
-<meta property="og:description" content="A collection of radio station streams located in Europe that have mixshows occuring.">
+<meta property="og:url" content="https://asherr.org/radio1hu">
+<meta property="og:title" content="Mixshow Database">
+<meta property="og:description" content="Radio 1 Hungary Live!">
 <meta property="og:image" content="https://asherr.org/DJ.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://asherr.org/Europe.html">
-<meta property="twitter:title" content="Europe Mixshow Database">
-<meta property="twitter:description" content="A collection of radio station streams located in Europe that have mixshows occuring.">
+<meta property="twitter:title" content="Mixshow Database">
+<meta property="twitter:description" content="Radio 1 Hungary Live">
 <meta property="twitter:image" content="https://asherr.org/DJ.png">
 <h1 style="text-align: center;">
   <a href="https://asherr.org/mix">Mixshow Database</a>
