--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 <meta property="twitter:image" content="https://asherr.org/DJ.png">
 
 <h1 style="text-align: center;">
-  <a href="https://asherr.org/">Mixshow Database</a>
+  <a href="https://asherr.org/mix">Mixshow Database</a>
 </h1>
 <hr />
 
