--- a/mix.html
+++ b/mix.html
@@ -65,3 +65,11 @@
       <a style="color: #3366ff;" href="https://asherr.org/schedule.html">Schedule</a>
     </span>
     </p>
+    <div style="display: flex; justify-content: center; align-items: flex-end; height: 10vh;">
+  <p style="text-align: center;">
+    <span style="color: #3366ff; font-size: 25px; font-weight: bold;">
+      <a style="color: #3366ff; text-decoration: none;" href="https://asherr.org/">Back to asherr.org</a>
+    </span>
+  </p>
+</div>
+
