--- a/mix.html
+++ b/mix.html
@@ -1,4 +1,8 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Primary Meta Tags -->
 <title>Mixshow Database</title>
 <meta name="title" content="Mixshow Database">
