--- a/q102.html
+++ b/q102.html
@@ -1,4 +1,10 @@
-<!-- Primary Meta Tags -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Your existing meta tags -->
+  <!-- Primary Meta Tags -->
 <!-- Primary Meta Tags -->
 <title>Mixshow Database</title>
 <meta name="title" content="Mixshow Database">
