--- a/radio1hu.html
+++ b/radio1hu.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Your existing meta tags -->
 <body>
   <!-- Primary Meta Tags -->
 <title>Europe Mixshow Database</title>
