--- a/rds.html
+++ b/rds.html
@@ -1,4 +1,9 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Your existing meta tags -->
 <!-- Primary Meta Tags -->
 <title>RDS PI Decode</title>
 <meta name="title" content="RDS PI Decode USA">
