--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Links</title>
+<title>asherr.org</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -63,7 +63,7 @@
 </style>
 </head>
 <body>
-  <h1>Radio Database Links</h1>
+  <h1>Links</h1>
   <div class="options">
     <a class="option" href="/rdsdb">PI to Callsign</a>
     <a class="option" href="/callsignlookup">Call Sign to PI</a>
