--- a/rdsdb.html
+++ b/rdsdb.html
@@ -3,6 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Primary Meta Tags -->
+  <title>asherr.org</title>
+  <meta name="title" content="asherr.org">
+  <meta name="description" content="random site with radio stuff because idk">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://asherr.org">
+  <meta property="og:title" content="asherr.org">
+  <meta property="og:description" content="random site with radio stuff because idk">
+  <meta property="og:image" content="https://asherr.org/elprimo.gif">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://asherr.org">
+  <meta property="twitter:title" content="asherr.org">
+  <meta property="twitter:description" content="random site with radio stuff because idk">
+  <meta property="twitter:image" content="https://asherr.org/elprimo.gif">
     <title>PI Code Lookup</title>
     <style>
         body {
