--- a/coverage.html
+++ b/coverage.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Your existing meta tags -->
   
   <!-- Primary Meta Tags -->
@@ -74,7 +72,7 @@
 </head>
 <body>
     <div id="content">
-        <h2>Enter USA Callsign:</h2>
+        <h2>Enter Callsign:</h2>
         <form id="callsignForm">
             <input type="text" id="callsignInput" placeholder="Enter callsign">
             <button type="submit">Submit</button>
@@ -93,10 +91,11 @@
         });
 
         function loadImages(callsign) {
+            var prefix = (callsign.startsWith('X') || callsign.startsWith('C')) ? 'FU' : 'LU';
             var imageUrls = [
-                `https://radio-locator.com/pats/${callsign}_FM_LUo.gif`,
-                `https://radio-locator.com/pats/${callsign}_FM_LU.gif`,
-                `https://radio-locator.com/pats/${callsign}_FM_LUi.gif`
+                `https://radio-locator.com/pats/${callsign}_FM_${prefix}o.gif`,
+                `https://radio-locator.com/pats/${callsign}_FM_${prefix}.gif`,
+                `https://radio-locator.com/pats/${callsign}_FM_${prefix}i.gif`
             ];
 
             var imageContainer = document.getElementById('imageContainer');
