--- a/stream/index.html
+++ b/stream/index.html
@@ -14,7 +14,7 @@
             <button type="submit">Load Stream</button>
         </form>
         <div class="stream-info">
-            <audio id="audioPlayer"></audio>
+            <audio id="audioPlayer" controls></audio>
             <div class="controls">
                 <button id="playButton">Play</button>
                 <button id="pauseButton">Pause</button>
