--- a/stream/index.html
+++ b/stream/index.html
@@ -8,16 +8,26 @@
 </head>
 <body>
     <div class="container">
-        <h1>iHeartRadio Stream Player</h1>
-        <input type="text" id="stationCode" placeholder="Enter Station Code">
-        <button onclick="loadStream()">Load Stream</button>
-        <div id="playerContainer" style="display: none;">
-            <audio id="audioPlayer" controls></audio>
-            <div id="metadata">
-                <h2 id="streamName">Stream Name</h2>
-                <p id="songInfo">Song and Artist</p>
-                <img id="artwork" src="" alt="Artwork" style="display: none;">
+        <h1>iHeartRadio Live Stream</h1>
+        <form id="streamForm">
+            <input type="text" id="codeInput" placeholder="Enter Station Code" required>
+            <button type="submit">Load Stream</button>
+        </form>
+        <div class="stream-info">
+            <audio id="audioPlayer"></audio>
+            <div class="controls">
+                <button id="playButton">Play</button>
+                <button id="pauseButton">Pause</button>
+                <button id="rewindButton">Rewind</button>
+                <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="1">
             </div>
+            <div id="streamName"></div>
+            <div id="songInfo">
+                <img id="artwork" src="" alt="Artwork">
+                <p id="songName"></p>
+                <p id="artistName"></p>
+            </div>
+            <div id="warningMessage" class="hidden">Stream failed to load. Please try again.</div>
         </div>
     </div>
     <script src="scripts.js"></script>
