--- a/stream/index.html
+++ b/stream/index.html
@@ -19,6 +19,7 @@
                 <button id="playButton">Play</button>
                 <button id="pauseButton">Pause</button>
                 <button id="rewindButton">Rewind</button>
+                <label for="volumeSlider">Volume</label>
                 <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="1">
             </div>
             <div id="streamName"></div>
