--- a/stream/index.html
+++ b/stream/index.html
@@ -14,14 +14,7 @@
             <button type="submit">Load Stream</button>
         </form>
         <div class="stream-info">
-            <audio id="audioPlayer"></audio>
-            <div class="controls">
-                <button id="playButton">Play</button>
-                <button id="pauseButton">Pause</button>
-                <button id="rewindButton">Rewind</button>
-                <label for="volumeSlider">Volume</label>
-                <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="1">
-            </div>
+            <audio id="audioPlayer" controls></audio>
             <div id="streamName"></div>
             <div id="songInfo">
                 <img id="artwork" src="" alt="Artwork">
