--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Your existing meta tags -->
-  
   <!-- Primary Meta Tags -->
   <title>asherr.org</title>
   <meta name="title" content="asherr.org">
@@ -24,43 +22,93 @@
   <meta property="twitter:description" content="random site with radio stuff because idk">
   <meta property="twitter:image" content="https://asherr.org/elprimo.gif">
   
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>asherr.org</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #3c3f43; /* Regular gray background */
-    text-align: center;
-    padding-bottom: 20px; /* Space for the footer */
-  }
-  .options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-  }
-  .option {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    margin-bottom: 10px;
-    display: block;
-  }
-  .option:hover {
-    background-color: #45a049;
-  }
-  .gif-container {
-    margin-top: 20px;
-  }
-  /* Cursor change for clickable element */
-  #elPrimoGif {
-    cursor: pointer;
-  }
-</style>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #6a11cb, #2575fc); /* Gradient background */
+      color: #fff; /* White text color */
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 2em;
+    }
+
+    .options {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+    }
+
+    .option {
+      padding: 15px 25px;
+      background-color: #4CAF50;
+      color: white;
+      text-decoration: none;
+      border-radius: 10px;
+      transition: background-color 0.3s, transform 0.2s;
+      margin-bottom: 10px;
+      display: block;
+      font-size: 1.1em;
+    }
+
+    .option:hover {
+      background-color: #45a049;
+      transform: scale(1.05);
+    }
+
+    .gif-container {
+      margin-top: 20px;
+    }
+
+    /* Cursor change for clickable element */
+    #elPrimoGif {
+      cursor: pointer;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Footer styles */
+    .footer {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      display: flex;
+      gap: 10px;
+    }
+
+    .footer a {
+      padding: 10px 15px;
+      background-color: #ff5722;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s, transform 0.2s;
+      font-size: 0.9em;
+    }
+
+    .footer a:hover {
+      background-color: #e64a19;
+      transform: scale(1.05);
+    }
+
+    .footer a.email {
+      background-color: #2196F3;
+    }
+
+    .footer a.email:hover {
+      background-color: #1976D2;
+    }
+  </style>
 </head>
 <body>
   <h1>Links</h1>
@@ -71,6 +119,10 @@
   </div>
   <div class="gif-container">
     <img id="elPrimoGif" src="https://asherr.org/elprimo.gif" alt="GIF not found" width="300" onclick="toggleSound()">
+  </div>
+  <div class="footer">
+    <a href="https://youtube.com/ashman887" target="_blank">Subscribe</a>
+    <a href="mailto:asher@asherr.org" class="email">Email</a>
   </div>
 
   <script>
