--- a/coverage.html
+++ b/coverage.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div id="content">
-        <h2>Enter Callsign:</h2>
+        <h2>Enter FM Callsign:</h2>
         <form id="callsignForm">
             <input type="text" id="callsignInput" placeholder="Enter callsign">
             <button type="submit">Submit</button>
